...
                }
                foremostItem
                    .padding(.bottom, isLoading ? 24.0 : 32.0)
                actions
                    .padding(.bottom, 32.0)
                details
                    .accessibilityIdentifier(isLoading ? "fingerprintLoadingView" : "fingerprintResultView")
                Spacer(minLength: 32.0)
            }
            .animation(.easeInOut(duration: 0.35), value: state)
        case let .error(error, action):
            ErrorView(
                systemImage: error.image.rawValue,
                title: error.localizedTitle,
                description: error.localizedDescription,
                buttonTitle: error.actionKind.localizedString,
                action: action
            )
            .accessibilityIdentifier("fingerprintErrorView")
        }
    }
}

@MainActor
private extension EventDetailsView {
...
