...
            label: {
                Image("Button/FingerprintImage")
            }
        )
        .buttonStyle(.fingerprint)
        .padding(.bottom, 40.0)
        .accessibilityIdentifier("tapToBeginButton")
        Text(
            """
            Device intelligence powered by
            Fingerprint iOS SDK \(AppInfo.sdkVersionString)
            """
        )
...
